// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDiagnosticLogSettingEntity properties transferred 1`] = `
Object {
  "_class": Array [
    "Configuration",
  ],
  "_key": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set/logs/AuditEvent/true/7/true",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "eventHubAuthorizationRuleId": undefined,
        "eventHubName": undefined,
        "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set",
        "logAnalyticsDestinationType": undefined,
        "logs": Array [
          Object {
            "category": "AuditEvent",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 7,
              "enabled": true,
            },
          },
          Object {
            "category": "AuditEvent",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 7,
              "enabled": false,
            },
          },
        ],
        "metrics": Array [
          Object {
            "category": "AllMetrics",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 0,
              "enabled": false,
            },
          },
        ],
        "name": "j1dev_diag_set",
        "serviceBusRuleId": undefined,
        "storageAccountId": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev_diag_set_resource_group/providers/Microsoft.Storage/storageAccounts/j1devdiagsetstrgacct",
        "type": "Microsoft.Insights/diagnosticSettings",
        "workspaceId": undefined,
      },
    },
  ],
  "_type": "azure_diagnostic_log_setting",
  "category": "AuditEvent",
  "createdOn": undefined,
  "displayName": "j1dev_diag_set",
  "enabled": true,
  "eventHubAuthorizationRuleId": undefined,
  "eventHubName": undefined,
  "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set/logs/AuditEvent/true/7/true",
  "logAnalyticsDestinationType": undefined,
  "name": "j1dev_diag_set",
  "retentionPolicy.days": 7,
  "retentionPolicy.enabled": true,
  "serviceBusRuleId": undefined,
  "storageAccountId": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev_diag_set_resource_group/providers/Microsoft.Storage/storageAccounts/j1devdiagsetstrgacct",
  "timeGrain": undefined,
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set",
  "workspaceId": undefined,
}
`;

exports[`createDiagnosticMetricSettingEntity properties transferred 1`] = `
Object {
  "_class": Array [
    "Configuration",
  ],
  "_key": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set/metrics/AllMetrics/true/undefined/0/false",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "eventHubAuthorizationRuleId": undefined,
        "eventHubName": undefined,
        "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set",
        "logAnalyticsDestinationType": undefined,
        "logs": Array [
          Object {
            "category": "AuditEvent",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 7,
              "enabled": true,
            },
          },
          Object {
            "category": "AuditEvent",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 7,
              "enabled": false,
            },
          },
        ],
        "metrics": Array [
          Object {
            "category": "AllMetrics",
            "enabled": true,
            "retentionPolicy": Object {
              "days": 0,
              "enabled": false,
            },
          },
        ],
        "name": "j1dev_diag_set",
        "serviceBusRuleId": undefined,
        "storageAccountId": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev_diag_set_resource_group/providers/Microsoft.Storage/storageAccounts/j1devdiagsetstrgacct",
        "type": "Microsoft.Insights/diagnosticSettings",
        "workspaceId": undefined,
      },
    },
  ],
  "_type": "azure_diagnostic_metric_setting",
  "category": "AllMetrics",
  "createdOn": undefined,
  "displayName": "j1dev_diag_set",
  "enabled": true,
  "eventHubAuthorizationRuleId": undefined,
  "eventHubName": undefined,
  "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set/metrics/AllMetrics/true/undefined/0/false",
  "logAnalyticsDestinationType": undefined,
  "name": "j1dev_diag_set",
  "retentionPolicy.days": 0,
  "retentionPolicy.enabled": false,
  "serviceBusRuleId": undefined,
  "storageAccountId": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev_diag_set_resource_group/providers/Microsoft.Storage/storageAccounts/j1devdiagsetstrgacct",
  "timeGrain": undefined,
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourcegroups/j1dev_diag_set_resource_group/providers/microsoft.keyvault/vaults/j1devdiagsetkeyvault/providers/microsoft.insights/diagnosticSettings/j1dev_diag_set",
  "workspaceId": undefined,
}
`;

exports[`createMonitorLogProfileEntity properties transferred 1`] = `
Object {
  "_class": Array [
    "Configuration",
  ],
  "_key": "/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/providers/microsoft.insights/logprofiles/default",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "categories": Array [
          "Delete",
          "Write",
          "Action",
        ],
        "id": "/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/providers/microsoft.insights/logprofiles/default",
        "location": "",
        "locations": Array [
          "global",
        ],
        "name": "default",
        "retentionPolicy": Object {
          "days": 3,
          "enabled": true,
        },
        "serviceBusRuleId": "",
        "storageAccountId": "/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/resourceGroups/JohnKemTest/providers/Microsoft.Storage/storageAccounts/johnkemtest8162",
        "type": "",
      },
    },
  ],
  "_type": "azure_monitor_log_profile",
  "categories": Array [
    "Delete",
    "Write",
    "Action",
  ],
  "createdOn": undefined,
  "displayName": "default",
  "id": "/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/providers/microsoft.insights/logprofiles/default",
  "locations": Array [
    "global",
  ],
  "name": "default",
  "retentionPolicy.days": 3,
  "retentionPolicy.enabled": true,
  "serviceBusRuleId": "",
  "storageAccountId": "/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/resourceGroups/JohnKemTest/providers/Microsoft.Storage/storageAccounts/johnkemtest8162",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/df602c9c-7aa0-407d-a6fb-eb20c8bd1192/providers/microsoft.insights/logprofiles/default",
}
`;
